[project]
name = "api_executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
]

[project.scripts]
api-executor = "api_executor.cli:cli"

[tool.uv]
package = true
